--- a/web/customers.html
+++ b/web/customers.html
@@ -2,42 +2,304 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>客户列表</title>
-    <link rel="stylesheet" href="css/common.css">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>客户详情页</title>
+    <link href="https://fastly.jsdelivr.net/npm/vant@4/lib/index.css" rel="stylesheet"/>
+    <link href="./common.css" rel="stylesheet">
+    <script src="./js/global.js"></script>
+    <script src="https://fastly.jsdelivr.net/npm/vant@4/lib/vant.min.js"></script>
+    <script src="./js/axios.min.js"></script>
+    <script src="./config.js"></script>
 </head>
-
 <body>
-    <div class="container">
-        <!-- 头部搜索区域 -->
-        <header class="search-header">
-            <div class="search-header-content">
-                <button class="back-btn">‹</button>
-                <h1 class="search-title">客户列表</h1>
-                <button class="search-menu-btn">⋯</button>
+<div class="container" id="app2">
+    <div style="background-color: #fff;">
+        <!-- tabs切换 -->
+        <div class="customer-tabs">
+            <div :class="'customer-tab ' + (type1Index == 0 ? 'active':'')" @click="onType1Change(0)">全部</div>
+            <div :class="'customer-tab ' + (type1Index == 1 ? 'active':'')" @click="onType1Change(1)">今日待跟进</div>
+            <div :class="'customer-tab ' + (type1Index == 2 ? 'active':'')" @click="onType1Change(2)">近期待跟进</div>
+        </div>
+        <!-- 搜索 -->
+        <div class="customer-search">
+            <div class="customer-search-icon">
+                <img alt="" src="./image/search.png">
             </div>
-        </header>
-
-
-
-         <!-- 底部导航 -->
-        <div class="bottom-navigation">
-            <div class="nav-item">
-                <img class="nav-icon" src="./image/home.svg" />
-                <div class="nav-label-active">首页</div>
-            </div>
-            <div class="nav-item" onclick="window.location.href='../customer/customer.html'" style="cursor: pointer;">
-                <img class="nav-icon" src="./image/customers.svg" width="22" height="22" />
-                <div class="nav-label">客户</div>
-            </div>
-            <div class="nav-item">
-                <img class="nav-icon" src="./image/optional.svg" width="22" height="22" />
-                <div class="nav-label">业绩</div>
-            </div>
-            <div class="nav-item">
-                <img class="nav-icon" src="./image/config.svg" width="22" height="22" />
-                <div class="nav-label">设置</div>
+            <input placeholder="搜索客户..."/>
+            <div class="customer-search-icon">
+                <img alt="" src="./image/x-circle.png">
             </div>
         </div>
+        <!-- 排序 -->
+        <div class="customer-sort">
+            <div>共&nbsp;{{dataTotal}}&nbsp;条</div>
+            <div style="flex: 1"></div>
+            <div>排序：营业额</div>
+            <div class="customer-sort-down">
+                <img alt="" src="./image/chevron-down.png">
+            </div>
+        </div>
+        <div class="customer-h1"></div>
     </div>
+
+    <main class="main-content">
+        <div class="customer-h1"></div>
+        <!-- 导航标签 -->
+        <div class="" style="display: flex;">
+            <div class="nav-tabs">
+                <button :class="'tab-btn ' + (type2Index == 0 ? 'active':'')" @click="onType2Change(0)">全部</button>
+                <button :class="'tab-btn ' + (type2Index == 1 ? 'active':'')" @click="onType2Change(1)">待办</button>
+                <button :class="'tab-btn ' + (type2Index == 2 ? 'active':'')" @click="onType2Change(2)">定期</button>
+                <button :class="'tab-btn ' + (type2Index == 3 ? 'active':'')" @click="onType2Change(3)">已发样</button>
+                <button :class="'tab-btn ' + (type2Index == 4 ? 'active':'')" @click="onType2Change(4)">已发货</button>
+            </div>
+            <div style="flex: 1;"></div>
+            <div class="customer-add-btn">添加客户</div>
+        </div>
+        <!-- 客户列表 -->
+        <div class="customer-list">
+            <div :key="item.customer_id" @click="onRead(item.customer_id)" class="customer-item"
+                 style="cursor: pointer;" v-for="(item,index) in dataList">
+                <div class="customer-avatar">
+                    <img alt="" src="./image/avatar.png">
+                </div>
+                <div @click.stop class="customer-info">
+                    <div class="customer-header">
+                        <div class="customer-name">
+                            <p>{{item.contact_name}}</p>
+                            <p class="line">|</p>
+                            <p class="title">{{item.customer_name}}</p>
+                        </div>
+                        <div class="time-icon">
+                            <img alt="" src="./image/clock.png">
+                        </div>
+                    </div>
+                    <div class="customer-tags" v-if="item.tags && item.tags.length > 0">
+                        <span :class="'tag '+tagColor[getRandomIntInclusive(0,2)]" :key="idx"
+                              v-for="(it,idx) in item.tags">{{it}}</span>
+                        <!-- <span class="tag big-customer">大客户</span> -->
+                        <!-- <span class="tag new-customer">新客户</span>
+                        <span class="tag never-ordered">从未下单</span> -->
+                    </div>
+                    <p class="customer-note">昨天约了今天电话</p>
+                    <div @click.stop class="action-buttons">
+                        <button @click.stop class="wechat-btn">
+                            <img alt="" src="./image/Vector.png">
+                            <span>发微信</span>
+                        </button>
+                        <button @click.stop="show1 = true" class="wait-btn">
+                            <img alt="" src="./image/wait.png">
+                            <span>加待办</span>
+                        </button>
+                        <div @click.stop class="more-btn">
+                            <img alt="" src="./image/Frame.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="customer-item">
+                <div class="customer-avatar">
+                    <img src="./image/avatar.png" alt="">
+                </div>
+                <div class="customer-info">
+                    <div class="customer-header">
+                        <div class="customer-name">
+                            <p>徐小二</p>
+                            <p class="line">|</p>
+                            <p class="title">副食品批发</p>
+                        </div>
+                        <div class="time-icon">
+                            <img src="./image/clock.png" alt="">
+                        </div>
+                    </div>
+                    <div class="customer-tags">
+                        <span class="tag big-customer">大客户</span>
+                        <span class="tag new-customer">新客户</span>
+                        <span class="tag never-ordered">从未下单</span>
+                    </div>
+                    <p class="customer-note">昨天约了今天电话</p>
+                    <div class="action-buttons">
+                        <button class="wechat-btn">
+                            <img src="./image/Vector.png" alt="">
+                            <span>发微信</span>
+                        </button>
+                        <button class="wait-btn">
+                            <img src="./image/wait.png" alt="">
+                            <span>加待办</span>
+                        </button>
+                        <div class="more-btn">
+                            <img src="./image/Frame.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+            <!-- <div class="customer-item">
+                <div class="customer-avatar">
+                    <img src="./image/avatar.png" alt="">
+                </div>
+                <div class="customer-info">
+                    <div class="customer-header">
+                        <div class="customer-name">
+                            <p>徐小二</p>
+                            <p class="line">|</p>
+                            <p class="title">副食品批发</p>
+                        </div>
+                        <div class="time-icon">
+                            <img src="./image/clock.png" alt="">
+                        </div>
+                    </div>
+                    <div class="customer-tags">
+                        <span class="tag big-customer">大客户</span>
+                        <span class="tag new-customer">新客户</span>
+                        <span class="tag never-ordered">从未下单</span>
+                    </div>
+                    <p class="customer-note">昨天约了今天电话</p>
+                    <div class="action-buttons">
+                        <button class="wechat-btn">
+                            <img src="./image/Vector.png" alt="">
+                            <span>发微信</span>
+                        </button>
+                        <button class="wait-btn">
+                            <img src="./image/wait.png" alt="">
+                            <span>加待办</span>
+                        </button>
+                        <div class="more-btn">
+                            <img src="./image/Frame.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+            <!-- <div class="customer-item">
+                <div class="customer-avatar">
+                    <img src="./image/avatar.png" alt="">
+                </div>
+                <div class="customer-info">
+                    <div class="customer-header">
+                        <div class="customer-name">
+                            <p>徐小二</p>
+                            <p class="line">|</p>
+                            <p class="title">副食品批发</p>
+                        </div>
+                        <div class="time-icon">
+                            <img src="./image/clock.png" alt="">
+                        </div>
+                    </div>
+                    <div class="customer-tags">
+                        <span class="tag big-customer">大客户</span>
+                        <span class="tag new-customer">新客户</span>
+                        <span class="tag never-ordered">从未下单</span>
+                    </div>
+                    <p class="customer-note">昨天约了今天电话</p>
+                    <div class="action-buttons">
+                        <button class="wechat-btn">
+                            <img src="./image/Vector.png" alt="">
+                            <span>发微信</span>
+                        </button>
+                        <button class="wait-btn">
+                            <img src="./image/wait.png" alt="">
+                            <span>加待办</span>
+                        </button>
+                        <div class="more-btn">
+                            <img src="./image/Frame.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+            <!-- <div class="customer-item">
+                <div class="customer-avatar">
+                    <img src="./image/avatar.png" alt="">
+                </div>
+                <div class="customer-info">
+                    <div class="customer-header">
+                        <div class="customer-name">
+                            <p>徐小二</p>
+                            <p class="line">|</p>
+                            <p class="title">副食品批发</p>
+                        </div>
+                        <div class="time-icon">
+                            <img src="./image/clock.png" alt="">
+                        </div>
+                    </div>
+                    <div class="customer-tags">
+                        <span class="tag big-customer">大客户</span>
+                        <span class="tag new-customer">新客户</span>
+                        <span class="tag never-ordered">从未下单</span>
+                    </div>
+                    <p class="customer-note">昨天约了今天电话</p>
+                    <div class="action-buttons">
+                        <button class="wechat-btn">
+                            <img src="./image/Vector.png" alt="">
+                            <span>发微信</span>
+                        </button>
+                        <button class="wait-btn">
+                            <img src="./image/wait.png" alt="">
+                            <span>加待办</span>
+                        </button>
+                        <div class="more-btn">
+                            <img src="./image/Frame.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+            </div>
+    </main>
+
+    <!-- 弹窗 待办 -->
+    <van-popup :style="{ width: '90%' }" v-model:show="show1">
+        <div class="popup-box1">
+            <div class="popup-box1-head">
+                <div>添加待办</div>
+                <div style="flex: 1;"></div>
+                <div @click="show1 = false" class="popup-box1-close">
+                    <img alt="" src="./image/x1.png">
+                </div>
+            </div>
+            <div class="popup-box1-form">
+                <van-form>
+                    <van-field border is-link placeholder="请选择计划时间" v-model="form1.time">
+                        <template #label>
+                            <div class="field-label">计划时间</div>
+                        </template>
+                    </van-field>
+                    <van-field border is-link placeholder="请选择待办类型" v-model="form1.type">
+                        <template #label>
+                            <div class="field-label">待办类型</div>
+                        </template>
+                    </van-field>
+                    <van-field border placeholder="请输入待办内容" type="textarea" v-model="form1.content">
+                        <template #label>
+                            <div class="field-label">待办内容</div>
+                        </template>
+                    </van-field>
+                </van-form>
+            </div>
+            <div class="popup-box1-bottom">
+                <div style="flex: 1;"></div>
+                <div class="popup-box1-bottom-btn">创建待办</div>
+            </div>
+        </div>
+    </van-popup>
+
+    <!-- 底部导航 -->
+    <div class="bottom-navigation">
+        <div class="nav-item" onclick="window.location.href='./index.html'" style="cursor: pointer;">
+            <img class="nav-icon" height="22" src="./image/home.png" width="22"/>
+            <div class="nav-label">首页</div>
+        </div>
+        <div class="nav-item">
+            <img class="nav-icon" height="22" src="./image/customer-select.png" width="22"/>
+            <div class="nav-label-active">客户</div>
+        </div>
+        <div class="nav-item">
+            <img class="nav-icon" height="22" src="./image/optional.svg" width="22"/>
+            <div class="nav-label">业绩</div>
+        </div>
+        <div class="nav-item">
+            <img class="nav-icon" height="22" src="./image/config.svg" width="22"/>
+            <div class="nav-label">设置</div>
+        </div>
+    </div>
+</div>
 </body>
+<script src="./js/comm.js"></script>
+</html>
